# OrgHub

./: .gitignore  README.md  main.py  pyproject.toml
Backend/: .gitignore  API_DOCS.md  build.sh  pyproject.toml  seed_db.py
Backend/backend/API/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
Backend/backend/Config/: settings.py  urls.py
Documentation/: OrgHub.docx
Frontend/: index.html  package-lock.json
Frontend/src/components/: DeadlineCard.css  GeneralFeed.css  ResourceGrid.css  ResourceGrid.tsx
Frontend/src/pages/: DashboardPage.css  DashboardPage.tsx  LoginPage.css
backend/: API_DOCS.md  pyproject.toml  seed_db.py
backend/Config/: settings.py
backend/backend/API/: admin.py  models.py  permissions.py  serializers.py  services.py  storage.py  tests.py  urls.py  views.py
backend/backend/Config/: settings.py
backend/supabase/: README.md
documentation/: OrgHub.docx
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DeadlineCard.tsx  ErrorBoundary.tsx  GeneralFeed.tsx  MeetingCard.css  MeetingCard.tsx  ResourceGrid.css  Sidebar.css  Sidebar.tsx  TopBar.css  TopBar.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  WorkspaceContext.tsx
frontend/src/lib/: apiError.ts  fetcher.ts  queryClient.ts
frontend/src/pages/: DashboardPage.css  DashboardPage.tsx  InvitationAcceptPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: announcements.ts  api.ts  auth.ts  calendar.ts  dashboard.ts  (+7 more)
(+92 files in other folders)
