[project]
name = "orghub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.12",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.3.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "python-dotenv>=1.2.2",
]
